syntax = "proto2";

message CriticalHumidityValueMessage {
    required float currentHumidity = 2;
    required float neededHumidity = 3;
}
