syntax = "proto2";

message IncubationSessionCurrentHumidityMessage {
    required float humidity = 2;
}
